[gd_scene load_steps=10 format=3 uid="uid://b6cf3b6h8e6lt"]

[ext_resource type="PackedScene" uid="uid://upvucuou2f1j" path="res://prefabs/slideshow/SlideshowParticles.tscn" id="1_pdjoh"]
[ext_resource type="PackedScene" uid="uid://b4f6mv66o5eb0" path="res://prefabs/slideshow/SlideshowBlinker.tscn" id="2_n6jdq"]
[ext_resource type="PackedScene" uid="uid://drwd1q1oipqfa" path="res://prefabs/slideshow/SlideshowToolbar.tscn" id="3_408i4"]
[ext_resource type="PackedScene" uid="uid://bd7cfcaq6e1ru" path="res://prefabs/slideshow/SlideshowSideParticles.tscn" id="3_w41wi"]
[ext_resource type="Script" path="res://scripts/slideshow/SlideControl.gd" id="3_wqglq"]
[ext_resource type="PackedScene" uid="uid://c464hdyhdchl6" path="res://prefabs/slideshow/slide.tscn" id="5_p84bp"]
[ext_resource type="PackedScene" uid="uid://bckxllfl2iaih" path="res://prefabs/slideshow/SlideImage.tscn" id="6_h23tw"]
[ext_resource type="Texture2D" uid="uid://d2q7dsaajxcnv" path="res://images/logo_catolica.png" id="7_wu8gi"]

[sub_resource type="LabelSettings" id="LabelSettings_mo4q6"]
font_size = 36
outline_size = 5
outline_color = Color(0.270222, 0.270222, 0.270222, 1)

[node name="slideshow" type="Node"]

[node name="background" type="Node2D" parent="."]

[node name="TopBlinker" parent="background" instance=ExtResource("2_n6jdq")]
position = Vector2(635, 37)
rotation = -3.14159

[node name="DownBlinker" parent="background" instance=ExtResource("2_n6jdq")]
position = Vector2(635, 684)
rotation = -6.28319

[node name="SlideshowParticles" parent="background" instance=ExtResource("1_pdjoh")]
position = Vector2(1320, 357)
scale = Vector2(0.9, 0.9)

[node name="SlideshowLeftParticles" parent="background" instance=ExtResource("3_w41wi")]
position = Vector2(-11, 359)

[node name="SlideshowRightParticles" parent="background" instance=ExtResource("3_w41wi")]
position = Vector2(1295, 359)
rotation = 3.14159

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_wqglq")

[node name="Slides" type="Control" parent="Control"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Slide" parent="Control/Slides" instance=ExtResource("5_p84bp")]
layout_mode = 1

[node name="SlideImage" parent="Control/Slides/Slide" instance=ExtResource("6_h23tw")]
layout_mode = 0
offset_left = 161.0
offset_top = -81.0
offset_right = 1537.0
offset_bottom = 377.0
scale = Vector2(0.409556, 0.409556)
texture = ExtResource("7_wu8gi")

[node name="Label" type="Label" parent="Control/Slides/Slide"]
layout_mode = 0
offset_left = 74.0
offset_top = 60.0
offset_right = 814.0
offset_bottom = 213.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Quanto dinheiro os jogos na Steam fazem?"
label_settings = SubResource("LabelSettings_mo4q6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slide2" parent="Control/Slides" instance=ExtResource("5_p84bp")]
visible = false
layout_mode = 1
enter_animation = 1
exit_animation = 1

[node name="Label" type="Label" parent="Control/Slides/Slide2"]
layout_mode = 0
offset_left = 306.0
offset_top = 72.0
offset_right = 556.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ablbulbejfçalksjdçfakjsçdfklajsdf
asdfaskdjfas
dfaskdfjaldfkjalfdk
f
asfdajlksfdjalksjfda
fda"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slide3" parent="Control/Slides" instance=ExtResource("5_p84bp")]
visible = false
layout_mode = 1
enter_animation = 2
exit_animation = 2

[node name="Label" type="Label" parent="Control/Slides/Slide3"]
layout_mode = 0
offset_left = 306.0
offset_top = 72.0
offset_right = 556.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ablbulbejfçalksjdçfakjsçdfklajsdf
asdfaskdjfas
dfaskdfjaldfkjalfdk
f
asfdajlksfdjalksjfda
fda"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slide4" parent="Control/Slides" instance=ExtResource("5_p84bp")]
visible = false
layout_mode = 1
enter_animation = 3
exit_animation = 3

[node name="Label" type="Label" parent="Control/Slides/Slide4"]
layout_mode = 0
offset_left = 306.0
offset_top = 72.0
offset_right = 556.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ablbulbejfçalksjdçfakjsçdfklajsdf
asdfaskdjfas
dfaskdfjaldfkjalfdk
f
asfdajlksfdjalksjfda
fda"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlideshowToolbar" parent="Control" instance=ExtResource("3_408i4")]
visible = false
layout_mode = 1

[connection signal="next_slide" from="Control/SlideshowToolbar" to="Control" method="_on_slideshow_toolbar_next_slide"]
[connection signal="previous_slide" from="Control/SlideshowToolbar" to="Control" method="_on_slideshow_toolbar_previous_slide"]
[connection signal="slider_changed" from="Control/SlideshowToolbar" to="Control" method="_on_slideshow_toolbar_slider_changed"]
